--- a/.github/workflows/recent-blog-posts.yml
+++ b/.github/workflows/recent-blog-posts.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Pull posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          feed_list: "https://dsanchezcr.com/blog/feed.json"
+          feed_list: "https://dsanchezcr.com/blog/atom.xml"
